<resources>
    <string name="app_name">Spotilist</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hi</string>
    <string name="gita">Gita,</string>
    <string name="question">What do you want to search today?</string>
    <string name="image">image</string>
    <string name="article">Article</string>
    <string name="see_all">See All</string>
    <!-- Sign In String -->
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="email_hint">dhikagita22@gmail.com</string>
    <string name="password_hint">************</string>
    <string name="password">Password</string>
    <string name="atau">ATAU</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="register_left">Doesn\'t have an account yet?</string>
    <string name="register_mid">Register</string>
    <string name="register_right">Now!</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="sign_in_left">Already Have an Account?</string>
    <string name="sign_in_mid">Sign In</string>
    <string name="sign_in_right">Now!</string>
    <string name="your_favorite">Your Favorite</string>
    <string name="log_out">Log Out</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="play_song">Play Song</string>
    <string name="lyrics">Lyrics</string>
</resources>