<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="133dp"
        android:layout_height="216dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_logo_spotlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/poppins"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="4dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/gray"
            android:fontFamily="@font/poppins"
            android:backgroundTint="@color/gray"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:endIconMode="password_toggle"
        app:hintEnabled="false">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:hint="@string/password_hint"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/gray"
            android:longClickable="false"/>


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <View
        android:id="@+id/view"
        android:layout_width="138dp"
        android:layout_height="2dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="31dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toStartOf="@id/tv_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/or"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

    <View
        android:id="@+id/view2"
        android:layout_width="138dp"
        android:layout_height="2dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="31dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_or"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

    <Button
        android:id="@+id/btn_google"
        android:layout_width="216dp"
        android:layout_height="32dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/login_google_color"
        android:drawableStart="@drawable/ic_google_smaller"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="216dp"
        android:layout_height="32dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintTop_toBottomOf="@id/btn_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/login_facebook_color"
        android:drawableStart="@drawable/ic_facebook_smaller"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/btn_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_register_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_left"
            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/tv_register_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_mid"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tv_register_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_right"
            android:textColor="@color/gray"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>